--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.13.2",
-        "multer": "^1.4.5-lts.2"
+        "multer": "^1.4.5-lts.2",
+        "react-icons": "^5.5.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
